...
    <string name="day_of_week_wednesday">Wed</string>
    <string name="day_of_week_thursday">Thu</string>
    <string name="day_of_week_friday">Fri</string>
    <string name="day_of_week_saturday">Sat</string>
    <string name="day_of_week_sunday">Sun</string>

    <string name="activity_hint">Activities</string>
    <string name="category_hint">Categories</string>
    <string name="record_tag_hint">Record tags</string>
    <string name="record_tag_hint_short">Tags</string>
    <string name="nothing_selected">Nothing selected</string>
    <string name="something_selected">Selected</string>
    <string name="something_available">Available</string>
    <string name="something_preselected">Preselected</string>
    <string name="select_all">Select all</string>
    <string name="select_nothing">Select nothing</string>
...

    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>

    <string name="untracked_time_name">Untracked</string>
    <string name="uncategorized_time_name">Uncategorized</string>
    <string name="multitask_time_name">Multitask</string>
    <string name="record_types_empty">No activities added</string>
    <string name="record_tag_selection_hint">Select record tag</string>
    <string name="time_now">Now</string>
    <string name="cannot_be_in_the_future">Time cannot be in the future</string>

...
    <string name="records_switch_to_list">Switch to list view</string>
    <string name="no_records_exist">Records will be shown here</string>
    <string name="record_add_hint">Click on %s to add new record</string>
    <string name="record_date_hint">Click on date button to select date</string>

    <!--  Statistics  -->
    <string name="statistics_total_tracked">Total tracked</string>
    <string name="statistics_total_tracked_short">Total</string>
    <string name="statistics_hint">Click on card to view detailed statistics</string>
    <string name="statistics_daily_calendar_hint">Daily calendar</string>
    <string name="no_statistics_exist">Statistics will be shown here</string>

    <!--  Goals  -->
...
    <string name="change_record_favourite_comments_hint">Favourite</string>
    <string name="change_record_favourite_comments_hint_long">Favourite comments</string>
    <string name="change_record_favourite_activity_selection">Favourite only for selected activities</string>
    <string name="change_record_similar_comments_hint">Similar comments</string>
    <string name="change_record_categories_empty">No record tags added</string>
    <string name="change_record_save">Save</string>
    <string name="change_record_untagged">Untagged</string>
    <string name="change_record_tag_from_other_activity">Assigned to other activities</string>
    <string name="change_running_record_removed">Running activity removed</string>
    <string name="change_record_split">Divide</string>
    <string name="change_record_split_hint">Will cut current record into two at the specified point in time</string>
    <string name="change_record_continue">Continue</string>
    <string name="change_record_continue_hint">Will remove current record and continue tracking this activity</string>
...
    <string name="records_filter_duplications">Duplications</string>
    <string name="records_filter_select_tags">Select tags</string>
    <string name="records_filter_manually_filtered">Filtered</string>
    <string name="records_filter_no_comment">No comment</string>
    <string name="records_filter_any_comment">Any comment</string>
    <string name="records_filter_select">Select</string>
    <string name="records_filter_exclude">Exclude</string>
    <string name="records_filter_exclude_other">Exclude other</string>
    <string name="records_filter_invert_selection">Invert selection</string>
    <string name="records_filter_duration_min">Minimum</string>
    <string name="records_filter_duration_max">Maximum</string>
    <string name="records_filter_duplications_same_activity">Same activity</string>
    <string name="records_filter_duplications_same_times">Same time</string>
...
