<?xml version="1.0" encoding="utf-8"?>
<com.example.util.simpletimetracker.core.view.RecordTypeView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/viewRecordTypeItem"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />