<?xml version="1.0" encoding="utf-8"?>
<com.example.util.simpletimetracker.core.view.CategoryView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewCategoryItem"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardElevation="@dimen/record_type_card_elevation"
    tools:itemName="Item name" />